tests/baselines/reference/numericIndexerConstrainsPropertyDeclarations(strict=true).errors.txt
numericIndexerConstrainsPropertyDeclarations.ts(12,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
numericIndexerConstrainsPropertyDeclarations.ts(13,5): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
numericIndexerConstrainsPropertyDeclarations.ts(14,5): error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
numericIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2411: Property '3.0' of type 'MyNumber' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(52,6): error TS7006: Parameter 'x' implicitly has an 'any' type.
numericIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(70,6): error TS7006: Parameter 'x' implicitly has an 'any' type.
numericIndexerConstrainsPropertyDeclarations.ts(85,5): error TS2322: Type 'number' is not assignable to type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(88,9): error TS2304: Cannot find name 'Myn'.


==== numericIndexerConstrainsPropertyDeclarations.ts (11 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyNumber extends Number {
        foo: number;
    }
    
    class C {
        [x: number]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        b: number; // ok
        ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
        c: () => {} // ok
        ~
!!! error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        3.0: MyNumber // error
        ~~~
!!! error TS2411: Property '3.0' of type 'MyNumber' is not assignable to 'number' index type 'string'.
    
        get X() { // ok
            return '';
        }
        set X(v) { } // ok
    
        foo() { 
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
            return 1;
        }
    }
    
    interface I {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        (): string; // ok
        (x): number // ok
         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    var a: {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        (): string; // ok
        (x): number // ok
         ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    // error
    var b: { [x: number]: string; } = {
        a: '',
        b: 1, 
        c: () => { }, 
        "d": '', 
        "e": 1, 
        1.0: '',
        2.0: 1, 
        ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 numericIndexerConstrainsPropertyDeclarations.ts:78:10: The expected type comes from this index signature.
        "3.0": '', 
        "4.0": 1, 
        f: <Myn>null, 
            ~~~
!!! error TS2304: Cannot find name 'Myn'.
    
        get X() { 
            return '';
        },
        set X(v) { }, 
        foo() { 
            return '';
        }
    }